# chgeos

./: .gitignore  .gitmodules  BENCHMARK.md  CH_CHANGES.md  CLAUDE.md  CMakeLists.txt  CTestCustom.cmake.in  LICENSE  README.md  benchmark_results.json  main.cpp  sf1.sql  toolchain.cmake
clickhouse/: config-e2e.xml  config-test-preprocessed.xml  config-test.xml  create.sql  test_e2e.sh
scripts/: bench.sh  bench_q11_fuse.sh  bench_sf.sh  bench_sf1.sh  bench_sf1_col.sh  bench_sf1_mp.sh  gen_clickhouse_types.py  import_sf.sh  link_bench_data.sh  plot_benchmarks.py  reload.sh  restart_ch.sh  strip_tag_exports.py
src/: chain.hpp  clickhouse.hpp  clickhouse_types.hpp  col_prep_op.hpp  columnar.hpp  functions.hpp  io.hpp  main.cpp  mem.cpp  mem.hpp  msgpack.hpp  rowbinary.hpp  udf.hpp
src/functions/: accessors.hpp  bench.hpp  ch_to_wkb.hpp  constructors.hpp  io.hpp  knn.hpp  overlay.hpp  predicates.hpp  processing.hpp  transforms.hpp
src/geom/: chgeom.hpp  filters.hpp  subdivide.hpp  wkb.cpp  wkb.hpp  wkb_envelope.cpp  wkb_envelope.hpp
tests/: CMakeLists.txt  helpers.hpp  test_accessors.cpp  test_bbox_wrapper.cpp  test_chain.cpp  test_columnar.cpp  test_constructors.cpp  test_functions.cpp  test_io.cpp  test_mem.cpp  test_overlay.cpp  test_predicates.cpp  test_processing.cpp  test_rowbinary.cpp  test_transforms.cpp  test_unpack.cpp
wasm-stubs/sys/: prctl.h
